API fetch and update done

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
       <div class="h-full bg-white rounded-2xl dark:bg-gray-700">
         <div class="flex items-center justify-center pt-6">
           <h1
-            class="font-extrabold text-2xl rounded-xl px-2 text-white bg-gradient-to-r from-red-500 to-emerald-500 via-blue-300">
+            class="font-extrabold text-2xl rounded-xl px-2 text-white bg-gradient-to-r from-primary to-secondary">
             INEO TMS</h1>
         </div>
         <app-navbar></app-navbar>
