--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,13 +1,12 @@
-<app-drop-indicator [beforeId]="id" [column]="column"></app-drop-indicator>
+<!-- <app-drop-indicator [beforeId]="id" [column]="column"></app-drop-indicator> -->
 
-<div class="mb-4 cursor-grab active:cursor-grabbing" layout [attr.layoutId]="id" draggable="true"
-  (dragstart)="handleDragStart($event)">
+<div class="mb-4 cursor-drag active:cursor-grabbing select-none" (click)="openTaskDetails(task.id)" cdkDrag>
   <div class="w-full p-4 bg-white shadow-lg rounded-2xl dark:bg-gray-700">
     <div class="flex items-center justify-between mb-6">
       <div class="flex items-center">
         <div class="flex flex-col">
           <span class="ml-2 font-bold text-black text-md dark:text-white">
-            {{ title }}
+            {{ task.title }}
           </span>
         </div>
       </div>
@@ -27,7 +26,7 @@
       </span>
       <span
         class="flex items-center px-2 py-1 text-xs font-semibold text-red-400 bg-white border border-red-400 rounded-md">
-        {{ priority.toUpperCase() }} PRIORITY
+        {{ task.priority.toUpperCase() }} PRIORITY
       </span>
     </div>
   </div>
@@ -58,3 +57,8 @@
   </div>
 </div>
 }
+
+<!-- <app-task-details *ngIf="showTaskDetailsModal" [taskTitle]="selectedTask!.title"
+  [taskDescription]="selectedTask!.description" (taskUpdated)="updateTask($event)"
+  (modalClosed)="showTaskDetailsModal = false">
+</app-task-details> -->
