--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 <header class="z-40 items-center w-full h-[70px] bg-white shadow-lg dark:bg-gray-700 rounded-2xl">
-  <div class="relative z-20 flex flex-col justify-center h-full px-3 mx-auto flex-center">
+  <div class="relative flex flex-col justify-center h-full px-3 mx-auto flex-center">
     <div class="relative flex items-center w-full pl-1 lg:max-w-68 sm:pr-2 sm:ml-0">
-      <div class="flex gap-4 w-full items-center">
+      <div class="flex gap-4 w-1/3 items-center">
         <div class="flex gap-1 items-center">
           <svg width="20px" height="20px" viewBox="-0.5 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg"
             stroke="#606060">
@@ -15,11 +15,10 @@
           </svg>
           <span class="text-l font-semibold text-gray-600">Filter</span>
         </div>
-
-        <div class="w-1/4">
+        <div class="w-full">
           <div class="relative mt-1">
             <button type="button" (click)="statusFilter = !statusFilter"
-              class="relative w-full py-3 pl-3 pr-10 text-left bg-white rounded-md ring-1 ring-blue-200 cursor-default focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-sm">
+              class="relative w-full py-3 pl-3 pr-10 text-left bg-white rounded-md ring-1 ring-primary-200 cursor-default focus:outline-none focus:ring-primary focus:border-primary sm:text-sm">
               <span class="flex items-center">
                 <span class="block truncate">
                   Status
@@ -36,11 +35,11 @@
               </span>
             </button>
             @if (statusFilter) {
-            <div class="absolute z-10 w-full mt-1 bg-white rounded-md shadow-lg">
+            <div class="absolute z-10 w-full mt-1 bg-white rounded-md shadow-lg" (mouseleave)="statusFilter = false">
               <ul tabindex="-1" role="listbox" aria-labelledby="listbox-label" aria-activedescendant="listbox-item-3"
                 class="py-1 overflow-auto text-base rounded-md max-h-56 ring-1 ring-black ring-opacity-5 focus:outline-none sm:text-sm">
                 <li id="listbox-item-0" role="option"
-                  class="relative py-2 pl-3 text-gray-900 cursor-default select-none hover:bg-blue-500 hover:text-white pr-9">
+                  class="relative py-2 pl-3 text-gray-900 cursor-default select-none hover:bg-secondary hover:text-white pr-9">
                   <div class="flex items-center">
                     <span class="block ml-3 font-normal truncate">
                       To Do
@@ -57,7 +56,7 @@
                   </span>
                 </li>
                 <li id="listbox-item-1" role="option"
-                  class="relative py-2 pl-3 text-gray-900 cursor-default select-none hover:bg-blue-500 hover:text-white pr-9">
+                  class="relative py-2 pl-3 text-gray-900 cursor-default select-none hover:bg-secondary hover:text-white pr-9">
                   <div class="flex items-center">
                     <span class="block ml-3 font-normal truncate">
                       In progress
@@ -65,7 +64,7 @@
                   </div>
                 </li>
                 <li id="listbox-item-1" role="option"
-                  class="relative py-2 pl-3 text-gray-900 cursor-default select-none hover:bg-blue-500 hover:text-white pr-9">
+                  class="relative py-2 pl-3 text-gray-900 cursor-default select-none hover:bg-secondary hover:text-white pr-9">
                   <div class="flex items-center">
                     <span class="block ml-3 font-normal truncate">
                       Done
@@ -77,10 +76,10 @@
             }
           </div>
         </div>
-        <div class="w-1/4">
+        <div class="w-full">
           <div class="relative mt-1">
             <button type="button" (click)="priorityFilter = !priorityFilter"
-              class="relative w-full py-3 pl-3 pr-10 text-left bg-white rounded-md ring-1 ring-blue-200 cursor-default focus:outline-none focus:ring-1 focus:ring-blue-500 focus:border-blue-500 sm:text-sm">
+              class="relative w-full py-3 pl-3 pr-10 text-left bg-white rounded-md ring-1 ring-primary-200 cursor-default focus:outline-none focus:ring-1 focus:ring-primary focus:border-primary sm:text-sm">
               <span class="flex items-center">
                 <span class="block truncate">
                   Priority
@@ -97,11 +96,11 @@
               </span>
             </button>
             @if (priorityFilter) {
-            <div class="absolute z-10 w-full mt-1 bg-white rounded-md shadow-lg">
+            <div class="absolute z-10 w-full mt-1 bg-white rounded-md shadow-lg" (mouseleave)="priorityFilter = false">
               <ul tabindex="-1" role="listbox" aria-labelledby="listbox-label" aria-activedescendant="listbox-item-3"
                 class="py-1 overflow-auto text-base rounded-md max-h-56 ring-1 ring-black ring-opacity-5 focus:outline-none sm:text-sm">
                 <li id="listbox-item-0" role="option"
-                  class="relative py-2 pl-3 text-gray-900 cursor-default select-none hover:bg-blue-500 hover:text-white pr-9">
+                  class="relative py-2 pl-3 text-gray-900 cursor-default select-none hover:bg-secondary hover:text-white pr-9">
                   <div class="flex items-center">
                     <span class="block ml-3 font-normal truncate">
                       High
@@ -118,7 +117,7 @@
                   </span>
                 </li>
                 <li id="listbox-item-1" role="option"
-                  class="relative py-2 pl-3 text-gray-900 cursor-default select-none hover:bg-blue-500 hover:text-white pr-9">
+                  class="relative py-2 pl-3 text-gray-900 cursor-default select-none hover:bg-secondary hover:text-white pr-9">
                   <div class="flex items-center">
                     <span class="block ml-3 font-normal truncate">
                       Medium
@@ -126,7 +125,7 @@
                   </div>
                 </li>
                 <li id="listbox-item-1" role="option"
-                  class="relative py-2 pl-3 text-gray-900 cursor-default select-none hover:bg-blue-500 hover:text-white pr-9">
+                  class="relative py-2 pl-3 text-gray-900 cursor-default select-none hover:bg-secondary hover:text-white pr-9">
                   <div class="flex items-center">
                     <span class="block ml-3 font-normal truncate">
                       Low
@@ -139,12 +138,20 @@
           </div>
         </div>
       </div>
-      <div class="relative flex items-center justify-end w-full p-1 ml-5 mr-4 sm:mr-0 sm:right-auto">
-        <div class="w-1/2">
+      <div class="relative flex items-center justify-center w-1/3 p-1 ml-5 mr-4 sm:mr-0 sm:right-auto">
+        <div class="w-3/4">
           <div class="relative mt-1">
             <button type="button" (click)="sortToggle = !sortToggle"
-              class="relative w-full py-3 pl-3 pr-10 text-left bg-white rounded-md ring-1 ring-blue-200 cursor-default focus:outline-none focus:ring-1 focus:ring-blue-500 focus:border-blue-500 sm:text-sm">
-              <span class="flex items-center">
+              class="relative w-full py-3 pl-3 pr-10 text-left bg-white rounded-md ring-1 ring-primary-200 cursor-default focus:outline-none focus:ring-1 focus:ring-primary focus:border-primary sm:text-sm">
+              <span class="flex gap-2 items-center">
+                <svg width="20px" height="20px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                  <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                  <g id="SVGRepo_iconCarrier">
+                    <path d="M13 12H21M13 8H21M13 16H21M6 7V17M6 17L3 14M6 17L9 14" stroke="#858585" stroke-width="2"
+                      stroke-linecap="round" stroke-linejoin="round"></path>
+                  </g>
+                </svg>
                 <span class="block truncate">
                   Sort By
                 </span>
@@ -160,11 +167,11 @@
               </span>
             </button>
             @if (sortToggle) {
-            <div class="absolute z-10 w-full mt-1 bg-white rounded-md shadow-lg">
+            <div class="absolute z-10 w-full mt-1 bg-white rounded-md shadow-lg" (mouseleave)="sortToggle = false">
               <ul tabindex="-1" role="listbox" aria-labelledby="listbox-label" aria-activedescendant="listbox-item-3"
                 class="py-1 overflow-auto text-base rounded-md max-h-56 ring-1 ring-black ring-opacity-5 focus:outline-none sm:text-sm">
                 <li id="listbox-item-0" role="option"
-                  class="relative py-2 pl-3 text-gray-900 cursor-default select-none hover:bg-blue-500 hover:text-white pr-9">
+                  class="relative py-2 pl-3 text-gray-900 cursor-default select-none hover:bg-secondary hover:text-white pr-9">
                   <div class="flex items-center">
                     <span class="block ml-3 font-normal truncate">
                       Due Date (Soonest First)
@@ -181,7 +188,7 @@
                   </span>
                 </li>
                 <li id="listbox-item-1" role="option"
-                  class="relative py-2 pl-3 text-gray-900 cursor-default select-none hover:bg-blue-500 hover:text-white pr-9">
+                  class="relative py-2 pl-3 text-gray-900 cursor-default select-none hover:bg-secondary hover:text-white pr-9">
                   <div class="flex items-center">
                     <span class="block ml-3 font-normal truncate">
                       Due Date (Latest First)
@@ -189,7 +196,7 @@
                   </div>
                 </li>
                 <li id="listbox-item-1" role="option"
-                  class="relative py-2 pl-3 text-gray-900 cursor-default select-none hover:bg-blue-500 hover:text-white pr-9">
+                  class="relative py-2 pl-3 text-gray-900 cursor-default select-none hover:bg-secondary hover:text-white pr-9">
                   <div class="flex items-center">
                     <span class="block ml-3 font-normal truncate">
                       Priority (Low to High)
@@ -197,7 +204,7 @@
                   </div>
                 </li>
                 <li id="listbox-item-1" role="option"
-                  class="relative py-2 pl-3 text-gray-900 cursor-default select-none hover:bg-blue-500 hover:text-white pr-9">
+                  class="relative py-2 pl-3 text-gray-900 cursor-default select-none hover:bg-secondary hover:text-white pr-9">
                   <div class="flex items-center">
                     <span class="block ml-3 font-normal truncate">
                       Priority (High to Low)
@@ -210,6 +217,19 @@
           </div>
         </div>
       </div>
+      <div class="flex justify-end w-1/3">
+        <button (click)="showModal=true" class="flex items-center border border-primary text-primary font-bold py-2 px-4 rounded shadow-md hover:bg-secondary hover:border-secondary hover:text-white transition-colors">
+          <!-- SVG Icon -->
+          <svg class="w-5 h-5 mr-2" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M12 4.5v15m7.5-7.5h-15"></path>
+          </svg>
+          Add Task
+        </button>
+      </div>
     </div>
   </div>
 </header>
+
+@if(showModal){
+  <app-add-task (taskAdded)="handleTaskAdded($event)" (modalClosed)="showModal = false"></app-add-task>
+}
