--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,6 +1,4 @@
-<!-- <app-drop-indicator [beforeId]="id" [column]="column"></app-drop-indicator> -->
-
-<div class="mb-4 cursor-drag active:cursor-grabbing select-none" (click)="openTaskDetails(task.id)" cdkDrag>
+<div class="mb-4 cursor-drag active:cursor-grabbing select-none" cdkDrag (click)="details()">
   <div class="w-full p-4 bg-white shadow-lg rounded-2xl dark:bg-gray-700">
     <div class="flex items-center justify-between mb-6">
       <div class="flex items-center">
@@ -10,19 +8,25 @@
           </span>
         </div>
       </div>
-      <div class="flex items-center">
-        <button class="text-gray-200">
-          <svg width="25" height="25" fill="currentColor" viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg">
-            <path
-              d="M1088 1248v192q0 40-28 68t-68 28h-192q-40 0-68-28t-28-68v-192q0-40 28-68t68-28h192q40 0 68 28t28 68zm0-512v192q0 40-28 68t-68 28h-192q-40 0-68-28t-28-68v-192q0-40 28-68t68-28h192q40 0 68 28t28 68zm0-512v192q0 40-28 68t-68 28h-192q-40 0-68-28t-28-68v-192q0-40 28-68t68-28h192q40 0 68 28t28 68z">
-            </path>
-          </svg>
-        </button>
+      <div class="flex items-center" (click)="onDelete(); $event.stopPropagation();">
+        <svg width="20px" height="20px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+          <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+          <g id="SVGRepo_iconCarrier">
+            <path d="M10 12V17" stroke="#d38d8d" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+            <path d="M14 12V17" stroke="#d38d8d" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+            <path d="M4 7H20" stroke="#d38d8d" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+            <path d="M6 10V18C6 19.6569 7.34315 21 9 21H15C16.6569 21 18 19.6569 18 18V10" stroke="#d38d8d"
+              stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+            <path d="M9 5C9 3.89543 9.89543 3 11 3H13C14.1046 3 15 3.89543 15 5V7H9V5Z" stroke="#d38d8d"
+              stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+          </g>
+        </svg>
       </div>
     </div>
     <div class="flex items-center justify-between mb-4 space-x-12">
       <span class="flex items-center px-2 py-1 text-xs font-semibold text-yellow-500 bg-yellow-100 rounded-md w-32">
-        DUE DATE : 18 JUN
+        DUE DATE: {{ task.dueDate | date: 'dd MMM' | uppercase }}
       </span>
       <span
         class="flex items-center px-2 py-1 text-xs font-semibold text-red-400 bg-white border border-red-400 rounded-md">
@@ -57,8 +61,3 @@
   </div>
 </div>
 }
-
-<!-- <app-task-details *ngIf="showTaskDetailsModal" [taskTitle]="selectedTask!.title"
-  [taskDescription]="selectedTask!.description" (taskUpdated)="updateTask($event)"
-  (modalClosed)="showTaskDetailsModal = false">
-</app-task-details> -->
