--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -38,13 +38,14 @@
             <div class="absolute z-10 w-full mt-1 bg-white rounded-md shadow-lg" (mouseleave)="statusFilter = false">
               <ul tabindex="-1" role="listbox" aria-labelledby="listbox-label" aria-activedescendant="listbox-item-3"
                 class="py-1 overflow-auto text-base rounded-md max-h-56 ring-1 ring-black ring-opacity-5 focus:outline-none sm:text-sm">
-                <li id="listbox-item-0" role="option"
+                <li id="listbox-item-0" role="option" (click)="toggleStatus('todo')"
                   class="relative py-2 pl-3 text-gray-900 cursor-default select-none hover:bg-secondary hover:text-white pr-9">
                   <div class="flex items-center">
                     <span class="block ml-3 font-normal truncate">
                       To Do
                     </span>
                   </div>
+                  @if (isStatusSelected('todo')) {
                   <span class="absolute inset-y-0 right-0 flex items-center pr-4">
                     <svg class="w-5 h-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"
                       aria-hidden="true">
@@ -54,21 +55,44 @@
                       </path>
                     </svg>
                   </span>
+                  }
                 </li>
-                <li id="listbox-item-1" role="option"
+                <li id="listbox-item-1" role="option" (click)="toggleStatus('doing')"
                   class="relative py-2 pl-3 text-gray-900 cursor-default select-none hover:bg-secondary hover:text-white pr-9">
                   <div class="flex items-center">
                     <span class="block ml-3 font-normal truncate">
                       In progress
                     </span>
                   </div>
+                  @if (isStatusSelected('doing')) {
+                  <span class="absolute inset-y-0 right-0 flex items-center pr-4">
+                    <svg class="w-5 h-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"
+                      aria-hidden="true">
+                      <path fill-rule="evenodd"
+                        d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
+                        clip-rule="evenodd">
+                      </path>
+                    </svg>
+                  </span>
+                  }
                 </li>
-                <li id="listbox-item-1" role="option"
+                <li id="listbox-item-1" role="option" (click)="toggleStatus('done')"
                   class="relative py-2 pl-3 text-gray-900 cursor-default select-none hover:bg-secondary hover:text-white pr-9">
                   <div class="flex items-center">
                     <span class="block ml-3 font-normal truncate">
                       Done
                     </span>
+                    @if (isStatusSelected('done')) {
+                    <span class="absolute inset-y-0 right-0 flex items-center pr-4">
+                      <svg class="w-5 h-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"
+                        aria-hidden="true">
+                        <path fill-rule="evenodd"
+                          d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
+                          clip-rule="evenodd">
+                        </path>
+                      </svg>
+                    </span>
+                    }
                   </div>
                 </li>
               </ul>
@@ -99,13 +123,14 @@
             <div class="absolute z-10 w-full mt-1 bg-white rounded-md shadow-lg" (mouseleave)="priorityFilter = false">
               <ul tabindex="-1" role="listbox" aria-labelledby="listbox-label" aria-activedescendant="listbox-item-3"
                 class="py-1 overflow-auto text-base rounded-md max-h-56 ring-1 ring-black ring-opacity-5 focus:outline-none sm:text-sm">
-                <li id="listbox-item-0" role="option"
+                <li id="listbox-item-0" role="option" (click)="togglePriority('high')"
                   class="relative py-2 pl-3 text-gray-900 cursor-default select-none hover:bg-secondary hover:text-white pr-9">
                   <div class="flex items-center">
                     <span class="block ml-3 font-normal truncate">
                       High
                     </span>
                   </div>
+                  @if (isPrioritySelected('high')) {
                   <span class="absolute inset-y-0 right-0 flex items-center pr-4">
                     <svg class="w-5 h-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"
                       aria-hidden="true">
@@ -115,22 +140,45 @@
                       </path>
                     </svg>
                   </span>
+                  }
                 </li>
-                <li id="listbox-item-1" role="option"
+                <li id="listbox-item-1" role="option" (click)="togglePriority('medium')"
                   class="relative py-2 pl-3 text-gray-900 cursor-default select-none hover:bg-secondary hover:text-white pr-9">
                   <div class="flex items-center">
                     <span class="block ml-3 font-normal truncate">
                       Medium
                     </span>
                   </div>
+                  @if (isPrioritySelected('medium')) {
+                  <span class="absolute inset-y-0 right-0 flex items-center pr-4">
+                    <svg class="w-5 h-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"
+                      aria-hidden="true">
+                      <path fill-rule="evenodd"
+                        d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
+                        clip-rule="evenodd">
+                      </path>
+                    </svg>
+                  </span>
+                  }
                 </li>
-                <li id="listbox-item-1" role="option"
+                <li id="listbox-item-1" role="option" (click)="togglePriority('low')"
                   class="relative py-2 pl-3 text-gray-900 cursor-default select-none hover:bg-secondary hover:text-white pr-9">
                   <div class="flex items-center">
                     <span class="block ml-3 font-normal truncate">
                       Low
                     </span>
                   </div>
+                  @if (isPrioritySelected('low')) {
+                  <span class="absolute inset-y-0 right-0 flex items-center pr-4">
+                    <svg class="w-5 h-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"
+                      aria-hidden="true">
+                      <path fill-rule="evenodd"
+                        d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
+                        clip-rule="evenodd">
+                      </path>
+                    </svg>
+                  </span>
+                  }
                 </li>
               </ul>
             </div>
