--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
     </div>
 
     <div class="flex flex-col w-full pl-0 md:p-4 md:space-y-4">
-      <app-header (taskCreated)="taskBoard.handleTaskCreated($event)" (filterChange)="taskBoard.onFilterChange($event)"></app-header>
+      <app-header (taskCreated)="taskBoard.handleTaskCreated($event)" (filterChange)="taskBoard.onFilterChange($event)" (sortChange)="taskBoard.onSortChange($event)"></app-header>
       <div class="h-screen pt-2 pb-12 pl-2 pr-2 overflow-scroll md:pt-0 md:pr-0 md:pl-0">
         <div class="flex flex-col flex-wrap sm:flex-row ">
           <div class="w-full">
