--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -218,13 +218,14 @@
             <div class="absolute z-10 w-full mt-1 bg-white rounded-md shadow-lg" (mouseleave)="sortToggle = false">
               <ul tabindex="-1" role="listbox" aria-labelledby="listbox-label" aria-activedescendant="listbox-item-3"
                 class="py-1 overflow-auto text-base rounded-md max-h-56 ring-1 ring-black ring-opacity-5 focus:outline-none sm:text-sm">
-                <li id="listbox-item-0" role="option"
+                <li id="listbox-item-0" role="option" (click)="onSortSelection('dueDateAsc')"
                   class="relative py-2 pl-3 text-gray-900 cursor-default select-none hover:bg-secondary hover:text-white pr-9">
                   <div class="flex items-center">
                     <span class="block ml-3 font-normal truncate">
                       Due Date (Soonest First)
                     </span>
                   </div>
+                  @if (isSelected('dueDateAsc')) {
                   <span class="absolute inset-y-0 right-0 flex items-center pr-4">
                     <svg class="w-5 h-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"
                       aria-hidden="true">
@@ -234,30 +235,64 @@
                       </path>
                     </svg>
                   </span>
+                  }
                 </li>
-                <li id="listbox-item-1" role="option"
+                <li id="listbox-item-1" role="option" (click)="onSortSelection('dueDateDesc')"
                   class="relative py-2 pl-3 text-gray-900 cursor-default select-none hover:bg-secondary hover:text-white pr-9">
                   <div class="flex items-center">
                     <span class="block ml-3 font-normal truncate">
                       Due Date (Latest First)
                     </span>
                   </div>
+                  @if (isSelected('dueDateDesc')) {
+                  <span class="absolute inset-y-0 right-0 flex items-center pr-4">
+                    <svg class="w-5 h-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"
+                      aria-hidden="true">
+                      <path fill-rule="evenodd"
+                        d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
+                        clip-rule="evenodd">
+                      </path>
+                    </svg>
+                  </span>
+                  }
                 </li>
-                <li id="listbox-item-1" role="option"
+                <li id="listbox-item-1" role="option" (click)="onSortSelection('priorityAsc')"
                   class="relative py-2 pl-3 text-gray-900 cursor-default select-none hover:bg-secondary hover:text-white pr-9">
                   <div class="flex items-center">
                     <span class="block ml-3 font-normal truncate">
                       Priority (Low to High)
                     </span>
                   </div>
+                  @if (isSelected('priorityAsc')) {
+                  <span class="absolute inset-y-0 right-0 flex items-center pr-4">
+                    <svg class="w-5 h-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"
+                      aria-hidden="true">
+                      <path fill-rule="evenodd"
+                        d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
+                        clip-rule="evenodd">
+                      </path>
+                    </svg>
+                  </span>
+                  }
                 </li>
-                <li id="listbox-item-1" role="option"
+                <li id="listbox-item-1" role="option" (click)="onSortSelection('priorityDesc')"
                   class="relative py-2 pl-3 text-gray-900 cursor-default select-none hover:bg-secondary hover:text-white pr-9">
                   <div class="flex items-center">
                     <span class="block ml-3 font-normal truncate">
                       Priority (High to Low)
                     </span>
                   </div>
+                  @if (isSelected('priorityDesc')) {
+                  <span class="absolute inset-y-0 right-0 flex items-center pr-4">
+                    <svg class="w-5 h-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"
+                      aria-hidden="true">
+                      <path fill-rule="evenodd"
+                        d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
+                        clip-rule="evenodd">
+                      </path>
+                    </svg>
+                  </span>
+                  }
                 </li>
               </ul>
             </div>
