--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,24 @@
-<main class="relative h-screen overflow-hidden bg-gray-100 dark:bg-gray-800 rounded-2xl">
-  <div class="flex items-start justify-between h-screen">
-    <div class="relative h-full hidden my-4 ml-4 shadow-lg lg:block w-80">
+<main class="fixed flex bg-gray-100 dark:bg-gray-800">
+  <div class="flex h-screen py-4 lg:pl-4 w-screen">
+    <button (click)="isSidebarOpen = !isSidebarOpen"
+      class="xl:hidden fixed top-4 left-4 z-50 p-2 bg-white dark:bg-gray-700 rounded-full shadow-lg">
+      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+        class="w-6 h-6 text-gray-800 dark:text-gray-200">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 5.25h16.5m-16.5 7.5h16.5m-16.5 7.5h16.5" />
+      </svg>
+    </button>
+    <div class="fixed top-4 left-1/3 sm:left-[40%] lg:hidden pt-2">
+      <h1 class="font-extrabold text-2xl rounded-xl px-2 text-white bg-gradient-to-r from-primary to-secondary">
+        INEO TMS
+      </h1>
+    </div>
+
+    <!-- Sidebar Component -->
+    <app-navbar [isOpen]="isSidebarOpen" (toggleSidebar)="isSidebarOpen = !isSidebarOpen"></app-navbar>
+
+    <!-- Main Content Area -->
+    <div class="flex-grow w-full">
+      <!-- <div class="relative rounded-2xl h-full hidden ml-4 shadow-lg lg:block w-80">
       <div class="h-full bg-white rounded-2xl dark:bg-gray-700">
         <div class="flex items-center justify-center pt-6">
           <h1 class="font-extrabold text-2xl rounded-xl px-2 text-white bg-gradient-to-r from-primary to-secondary">
@@ -9,18 +27,8 @@
         <app-navbar></app-navbar>
       </div>
     </div>
-
-    <div class="flex flex-col w-full pl-0 md:p-4 md:space-y-4">
-      <app-header (taskCreated)="taskBoard.handleTaskCreated($event)" (filterChange)="taskBoard.onFilterChange($event)" (sortChange)="taskBoard.onSortChange($event)"></app-header>
-      <div class="h-screen pt-2 pb-12 pl-2 pr-2 overflow-scroll md:pt-0 md:pr-0 md:pl-0">
-        <div class="flex flex-col flex-wrap sm:flex-row ">
-          <div class="w-full">
-            <app-board #taskBoard></app-board>
-          </div>
-        </div>
-      </div>
+    <div class="w-full"> -->
+      <router-outlet></router-outlet>
     </div>
   </div>
 </main>
-
-<router-outlet />
