--- a/src/app/components/add-task/add-task.component.html
+++ b/src/app/components/add-task/add-task.component.html
@@ -1,8 +1,6 @@
-
-
-<div class="fixed inset-0 z-50 flex items-center justify-center bg-black bg-opacity-50">
+<div class="fixed inset-0 z-50 p-2 sm:p-0 flex items-center justify-center bg-black bg-opacity-50">
   <div class="bg-white rounded-lg shadow-lg p-6 w-full max-w-lg">
-    <h3 class="text-xl font-bold mb-4">Add New Task</h3>
+    <h3 class="text-xl text-secondary font-bold mb-4">Add New Task</h3>
 
     <div class="mb-4">
       <label class="block text-sm font-medium text-gray-700">Title</label>
@@ -11,15 +9,16 @@
 
     <div class="mb-4">
       <label class="block text-sm font-medium text-gray-700">Description</label>
-      <quill-editor [(ngModel)]="newTask.description" class="mt-1" [modules]="editorModules"></quill-editor>
+      <quill-editor [(ngModel)]="newTask.description" class="mt-1 block w-full py-2" [modules]="editorModules"
+      style="height: 180px; max-height: 180px; overflow-y: auto; word-wrap: break-word; white-space: pre-wrap;"></quill-editor>
     </div>
 
     <div class="mb-4">
       <label class="block text-sm font-medium text-gray-700">Priority</label>
       <select [(ngModel)]="newTask.priority" class="mt-1 block w-full border border-gray-300 rounded-md p-2">
-        <option value="Low">Low</option>
-        <option value="Medium">Medium</option>
-        <option value="High">High</option>
+        <option value="low">Low</option>
+        <option value="medium" selected>Medium</option>
+        <option value="high">High</option>
       </select>
     </div>
 
@@ -30,7 +29,7 @@
 
     <div class="flex justify-end">
       <button (click)="onClose()" class="bg-gray-500 text-white px-4 py-2 rounded mr-2">Cancel</button>
-      <button (click)="onSave()" class="bg-blue-500 text-white px-4 py-2 rounded">Save</button>
+      <button (click)="onSave()" class="bg-primary text-white px-4 py-2 rounded">Save</button>
     </div>
   </div>
 </div>
